JavaScript fixed, not working yet because is bluring the original img but not showing the data-src before loading

--- a/lesson7/lazyload/css/style.css
+++ b/lesson7/lazyload/css/style.css
@@ -1,19 +1,14 @@
-body {
-    text-align: center;
-}
 .set-of-images {
     display: grid;
     grid-template-columns: 1fr;
-    max-width: 300px;
 }
-.set-of-images picture img {
-    grid-column: auto;
-    width: 100%;
-}
+
 img[data-src] {
     filter: blur(0.2em) ;
 }
 img {
+    width: 300px;
+    height: 400px;
     filter: blur(0em);
     transition: filter 0.5s;
 }
